--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ crash.log
 # version control.
 #
 # example.tfvars
+csye6225.tfvars.dev
+csye6225.tfvars.demo
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
@@ -28,5 +30,5 @@ override.tf.json
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
 
-.terraform.lock.hcl
 .DS_Store
+.terraform.lock.hcl
